# small-worklog

./: Cargo.toml  LICENSE  README.md  tasks.db
.github/workflows/: release.yml  rust.yml
src/: app.rs  frame.rs  main.rs  migrate.rs  store.rs  types.rs  version.rs
