[package]
name = "small-worklog"
version = "0.1.0"
authors = ["RetricSu <inneverland2013@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.72"
publish = false


[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
eframe = {version = "0.27.2", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
]}
egui_extras = { version = "0.27.2", features = ["default", "image"] }

# For image support:

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
