[package]
name = "small-worklog"
version = "0.1.2"
authors = ["RetricSu <inneverland2013@gmail.com>"]
description = "A lightweight desktop app to record daily work logs."
license = "MIT"
edition = "2021"
rust-version = "1.72"
publish = false

[package.metadata.bundle]
name = "small-worklog"
identifier = "small.work.log.app"

[features]
check_version = []

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
eframe = {version = "0.27.2", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
]}
egui_extras = { version = "0.27.2", features = ["default", "image"] }

# For image support:
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
rand = "0.8.5"
toml = "0.8.12"
rusqlite = {version = "0.31.0", features = ["bundled"]}
